Add endpoint PUT /categories/:category_code
