# app/controllers/v1/categories_controller.rb
@@ -6,18 +6,28 @@ class V1::CategoriesController < ApplicationController
     render json: CategorySerializer.new(Category.all, index_options).serializable_hash
   end
 
-  # DELETE /categories/1
-  def destroy
-    return render_error if category.blank?
+  # PUT /categories/:category_code
+  def update
+    category.update!(category_params)
 
+    render json: category, status: :no_content
+  end
+
+  # DELETE /categories/:category_code
+  def destroy
     category.destroy
+
     render nothing: true, status: :no_content
   end
 
   private
 
   def category
-    @category ||= Category.find_by(code: params[:category_code])
+    @category ||= Category.find_by!(code: params[:category_code])
+  end
+
+  def category_params
+    params.require(:category).permit(:name, :code)
   end
 
   def index_options
@@ -25,9 +35,5 @@ class V1::CategoriesController < ApplicationController
       meta: { total: Category.count },
       links: { next: nil, prev: nil }
     }
-  end
-
-  def render_error
-    render json: { errors: [{ title: "Category '#{params[:category_code]}' not found" }] }, status: :not_found
   end
 end
